--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+				transition: 'cube',
 				hash: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
