--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 					</ul>
 				</section>
 				<section>Slide 2</section>
+				<section data-markdown>
+				  <textarea data-template>
+				    ```py
+					  print('hello world')
+				    ```
+				    ---
+				    ## Slide 2
+				    ---
+				    ## Slide 3
+				  </textarea>
+				</section>
 			</div>
 		</div>
 
